--- a/.gitignore
+++ b/.gitignore
@@ -472,4 +472,8 @@ TSWLatexianTemp*
 .history
 .ionide
 
+### Metals ###
+.metals/
+.bloop/
+project/**/metals.sbt
 # End of https://www.toptal.com/developers/gitignore/api/latex,scala,visualstudiocode,intellij,java
