--- a/.gitignore
+++ b/.gitignore
@@ -476,4 +476,6 @@ TSWLatexianTemp*
 .metals/
 .bloop/
 project/**/metals.sbt
+*project/
+*target/
 # End of https://www.toptal.com/developers/gitignore/api/latex,scala,visualstudiocode,intellij,java
