--- a/.gitignore
+++ b/.gitignore
@@ -478,5 +478,6 @@ TSWLatexianTemp*
 project/**/metals.sbt
 *project/
 *target/
+.scalafmt.conf
 
 # End of https://www.toptal.com/developers/gitignore/api/latex,scala,visualstudiocode,intellij,java
