--- a/.gitignore
+++ b/.gitignore
@@ -479,5 +479,6 @@ project/**/metals.sbt
 *project/
 *target/
 .scalafmt.conf
-
+.scala-build/
+.bsp/
 # End of https://www.toptal.com/developers/gitignore/api/latex,scala,visualstudiocode,intellij,java
