--- a/.gitignore
+++ b/.gitignore
@@ -454,7 +454,7 @@ TSWLatexianTemp*
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 
 ### VisualStudioCode ###
-.vscode/*
+*vscode/*
 # !.vscode/settings.json
 # !.vscode/tasks.json
 # !.vscode/launch.json
