--- a/.gitignore
+++ b/.gitignore
@@ -483,3 +483,5 @@ project/**/metals.sbt
 .scala-build/
 .bsp/
 # End of https://www.toptal.com/developers/gitignore/api/latex,scala,visualstudiocode,intellij,java
+
+SourceCodeGroup22/
